1.增加“使用django-guardian实现django-admin的行级权限控制”的文章

--- a/source/_posts/图片转像素风实现.md
+++ b/source/_posts/图片转像素风实现.md
@@ -2,7 +2,7 @@
 title: 图片转像素风实现
 date: 2018-03-30 12:13:27
 tags: [图片, 小工具]
-categories: Python
+categories: python
 ---
 > Python用来写各种小工具简直是神器，昨天晚上花了点时间实现了一个图片转像素风的小工具，下面附上图片Demo和代码
 
